--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second ripo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>kam nai tai gittu pakaitasi</h1>
+    <h2>gittu pakano ektu kothin</h2>
+    <p>now in this module i am learning commit code to github.for commiting code for second time i need to do 3 step.these are first git add .   second is git commit -m"name"  .third is git push.</p>
 </body>
 </html>
