--- a/index.html
+++ b/index.html
@@ -4,12 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my second ripo</title>
-    <link rel="stylesheet" href="style.css">
+    <title>my travelling blog</title>
+    <style>
+        h1{background-color: green; 
+            color: yellow;
+        }
+
+        .blog{
+            background-color: blueviolet;
+            color: yellow;
+            border: 4px solid black;
+            border-radius: 20px;
+            margin: 20px;
+            padding: 10px 20px 30px 40px;
+            text-align: justify;
+
+
+        }
+        .rakib{
+            color:red;}
+        .title{
+            text-align: center ;
+            font-size: 20px;
+            font-weight: 700;
+            color: blanchedalmond;    
+        }
+
+    </style>
 </head>
 <body>
-    <h1>kam nai tai gittu pakaitasi</h1>
-    <h2>gittu pakano ektu kothin</h2>
-    <p>now in this module i am learning commit code to github.for commiting code for second time i need to do 3 step.these are first git add .   second is git commit -m"name"  .third is git push.</p>
+    <h1>Now I am gona start my first blog site</h1>
+
+    <div class="blog">
+        <h3 class="title">my kuakata tour in 2021</h3>
+
+        <small>writter: <span class="rakib">Rakib the king</span></small>
+
+        <p>in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.</p></div>
+
+    <div class="blog">
+        <h3 class="title">shatla tour</h3>
+        <small>writter: <span class="rakib">Rakib the king</span></small>
+        <p>in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday</p>
+    </div>
+
+    <div class="blog">
+        <h3 class="title">mia bari masque tour</h3>
+        <small>writter: <span class="rakib">Rakib the king</span></small>
+        <p>in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.</p></div>
+
 </body>
 </html>
