--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <h3 class="title">mia bari masque tour</h3>
         <small>writter: <span class="rakib">Rakib the king</span></small>
         <p>in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.</p></div>
+        adding  new commit for git
 
 </body>
 </html>
