--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
         <h3 class="title">mia bari masque tour</h3>
         <small>writter: <span class="rakib">Rakib the king</span></small>
         <p>in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.in this tour i made so much fun with my 2 best friend. i went their for one dayin my working holyday.</p></div>
+        <div>
+            <h3>somoy paina tai ghrute jaite pari na</h3>
+            <small>writter: <span class="rakib">Rakib the king</span></small>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic minus aliquam quisquam error ducimus, fugit consectetur molestias quasi veritatis debitis itaque fugiat recusandae, eius iure sed tempora vel numquam corrupti.</p>
+         </div>
+
         <img src="rakib vai.jpg" alt="">
 
 </body>
